laravel/passport Vue, Auth, VueResource, VueRouter

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,9 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "animate.min";
+
+@import "paper_dashboard";
+
+@import "demo";
